# StoryTeller

./: README.md  install_dependencies.py  pyproject.toml
docs/: Specification.md  __TODO.md
src/storyteller/: __init__.py  config.py  const.py  main.py  paths.py  utils.py
src/storyteller/gui/: main_window.py  welcome_dialog.py
src/tests/: test_config.py  test_const.py  test_main.py  test_paths.py  test_utils.py
