[project]
name = "storyteller"
version = "0.1.0"
description = "A universal conversation creator and dialog manager for games and stories using AI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt6>=6.9.0",
    "click>=8.0.0", # Add click
    # Add other core dependencies as needed, e.g., pandas, ollama, llama-index
    "pytest>=8.3.5",
]

# Add scripts entry point
[project.scripts]
storyteller = "storyteller.main:cli" # Point to the click group

# Add optional-dependencies for development
[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "black",
    "isort",
    "flake8",
    # Add other dev tools like pytest if needed
]

# Add build-system configuration if not present
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
